--- a/.env.local.example
+++ b/.env.local.example
@@ -3,3 +3,4 @@ RECO_DEFAULT_LIMIT=8
 RECO_MAX_LIMIT=20
 RECO_EVENTS_LOG_PATH=./data/reco/events.jsonl
 RECO_UNSUPPORTED_COUNTRIES=
+GOOGLE_MAPS_API_KEY=
