feat: ship map UX polish, provider routing, and launch docs

--- a/wrangler.jsonc
+++ b/wrangler.jsonc
@@ -1,11 +1,18 @@
 {
   "$schema": "./node_modules/wrangler/config-schema.json",
   "main": ".open-next/worker.js",
-  "name": "jummaechu",
+  "name": "mechu",
   "compatibility_date": "2026-02-19",
   "compatibility_flags": ["nodejs_compat"],
   "assets": {
     "directory": ".open-next/assets",
     "binding": "ASSETS"
-  }
+  },
+  "d1_databases": [
+    {
+      "binding": "DB",
+      "database_name": "mechu",
+      "database_id": "c0cdf28e-da8d-4642-9a24-6cebd884a6bd"
+    }
+  ]
 }
