--- a/.env.local.example
+++ b/.env.local.example
@@ -1,6 +1,9 @@
-RECO_DAILY_LIMIT=1000
 RECO_DEFAULT_LIMIT=8
 RECO_MAX_LIMIT=20
 RECO_EVENTS_LOG_PATH=./data/reco/events.jsonl
 RECO_UNSUPPORTED_COUNTRIES=
+RECO_PROVIDER_TIMEOUT_MS=8000
+GEOCODE_TIMEOUT_MS=8000
 GOOGLE_MAPS_API_KEY=
+KAKAO_REST_API_KEY=
+NEXT_PUBLIC_KAKAO_MAP_API_KEY=
