--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "rm -rf .next && NEXT_DISABLE_TURBOPACK=1 next dev -p 3000",
+    "dev": "rm -rf .next-dev && NEXT_DIST_DIR=.next-dev NEXT_DISABLE_TURBOPACK=1 next dev -p 3000",
+    "dev:e2e": "rm -rf .next-e2e && NEXT_DIST_DIR=.next-e2e NEXT_DISABLE_TURBOPACK=1 next dev -p 3100",
     "build": "next build",
     "start": "next start -p 3000",
     "lint": "next lint",
