--- a/.gitignore
+++ b/.gitignore
@@ -15,9 +15,6 @@ data/
 test-results/
 playwright-report/
 
-collapsed.png
-half.png
-expanded.png
-collapsed-state.png
-half-state.png
-expanded-state.png
+.mcp.json
+.playwright-mcp/
+.agents/requests
