fix: harden reco API, secure map rendering, and improve i18n/geo flow

--- a/.env.local.example
+++ b/.env.local.example
@@ -3,6 +3,9 @@ RECO_MAX_LIMIT=20
 RECO_EVENTS_LOG_PATH=./data/reco/events.jsonl
 RECO_UNSUPPORTED_COUNTRIES=
 RECO_PROVIDER_TIMEOUT_MS=8000
+RECO_RATE_LIMIT_WINDOW_MS=60000
+RECO_RATE_LIMIT_MAX=30
+RECO_RATE_LIMIT_STORE_MAX=10000
 GEOCODE_TIMEOUT_MS=8000
 GOOGLE_MAPS_API_KEY=
 KAKAO_REST_API_KEY=
